# small-media

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/small_media/: __init__.py  config.py  main.py  models.py
backend/src/small_media/routes/: __init__.py  folders.py  playlist.py  stream.py
backend/src/small_media/services/: __init__.py  filesystem.py  playlist.py  transcoder.py
backend/tests/: test_filesystem.py  test_playlist.py  test_transcoder.py
docs/: INSTALLATION.md  README.md  SPECIFICATION.md
docs/adr/: 001-technology-stack.md  002-transcoding-strategy.md  003-playlist-format.md  README.md
docs/api/: openapi.yaml
docs/issues/: README.md
docs/specs/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.vue  main.ts  style.css  sw.ts
frontend/src/api/: client.ts
frontend/src/components/: NavBar.vue  PlayerBar.vue
frontend/src/stores/: folder.ts  player.ts
frontend/src/types/: index.ts
frontend/src/views/: FolderListView.vue  FolderView.vue  QueueView.vue
